--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 body { font-family: 'Roboto', sans-serif;
-color: #2E2F42;
+color: #434455;
+background-color: #FFFFFF
 }
 .main-title { background-color: #2E2F42;
 width: 1440px;
@@ -7,25 +8,23 @@ width: 1440px;
     flex-shrink: 0;
 }
 /* header styls */
-.logo { color:  #4D5AE5;
-    font-family: 'Raleway', sans-serif;;
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 1.16;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-     }
-.logo2 { 
-    font-family: 'Raleway', sans-serif;
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 1.16;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-  
+.header-address {
+    font-style: normal
 }
-.logotype { text-decoration: none;}
+
+.logotype { text-decoration: none;
+        color: #4D5AE5;
+        font-family: 'Raleway', sans-serif;
+        font-size: 18px;
+        font-weight: 700;
+        line-height: 1.17;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;}
+.logotype-studio {
+    color: #2e2f42;
+}
 .list-nav-link { 
+    color: #2e2f42;
     font-size: 16px;
     font-weight: 500;
     line-height: 1.5;
@@ -41,16 +40,23 @@ width: 1440px;
    
 }
 .list-address-link { 
+    color: #434455;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     text-decoration: none;
+}
+.list-address-link:focus{
+    color: #404bbf;
 }
 .list-address-link:hover {
     color: #404BBF;
         font-size: 16px;
         line-height: 1.5;
         letter-spacing: 0.02em;
+}
+.list-nav-link:focus {
+    color: #404bbf;
 }
 .list-nav-link:hover { color: #404BBF}
 /* title styls */
@@ -78,6 +84,9 @@ background: #4D5AE5;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
 }
+.main-button:focus{
+    background-color: #404BBF;
+}
 .main-button:hover {
     border-radius: 4px;
         background: #404BBF;
@@ -96,7 +105,7 @@ background: #4D5AE5;
         font-size: 16px;
         font-weight: 400;
         line-height: 1.5;
-        letter-spacing: 0.02;
+        letter-spacing: 0.02em;
 }
 /*our-team  */
 .section-team-title {
@@ -120,7 +129,7 @@ background: #4D5AE5;
         text-align: center;
         font-size: 16px;
         line-height: 1.5;
-        letter-spacing:0.02;
+        letter-spacing:0.02em;
 }
 .section-team {
     background: #F4F4FD;
@@ -133,7 +142,7 @@ background: #4D5AE5;
         text-align: center;
         font-size: 36px;
         font-weight: 700;
-        line-height: 1.111;
+        line-height: 1.11;
         letter-spacing:0.02em;
         text-transform: capitalize;
 
@@ -143,9 +152,10 @@ background: #4D5AE5;
         font-size: 20px;
         font-weight: 500;
         line-height: 1.2;
-        letter-spacing: 0.02;
+        letter-spacing: 0.02em;
 }
 .section-portfolio-list-text {
+    color: #434455;
         font-size: 16px;
         line-height: 1.5;
         letter-spacing: 0.02em;
@@ -163,26 +173,17 @@ background: #4D5AE5;
         line-height: 1.5;
         letter-spacing: 0.02em;
 }
-.logo-footer {
+.main-footer-links {
     color: #4D5AE5;
-        font-family: 'Raleway', sans-serif;
-        font-size: 18px;
-        font-weight: 700;
-        line-height:1.16;
-        letter-spacing: 0.03em;
-        text-transform: uppercase;
-}
-.logo-footer2 {
-    color: var(--CLOUD, #F4F4FD);
-        font-family: 'Raleway', sans-serif;
+    font-family: 'Raleway', sans-serif;
         font-size: 18px;
         font-weight: 700;
         line-height: 1.16;
         letter-spacing: 0.03em;
         text-transform: uppercase;
-}
-
-
-
-
+        text-decoration: none;
+    }
+.logo-footer {
+    color:#F4F4FD;
+}      
 
