--- a/css/styles.css
+++ b/css/styles.css
@@ -94,6 +94,7 @@ background: #4D5AE5;
 }
 /* section-priorotet */
 .section-project-h3 {
+    color: #2e2f42;
     font-size: 20px;
     font-weight: 500;
     line-height: 1.2;
@@ -139,6 +140,7 @@ background: #4D5AE5;
 }
 /*our-portfolio  */
 .section-portfolio-title {
+    color: #2e2f42;
         text-align: center;
         font-size: 36px;
         font-weight: 700;
@@ -147,8 +149,12 @@ background: #4D5AE5;
         text-transform: capitalize;
 
 }
+.section-portfolio-list{
+    background-color: #FFFFFF;
+}
 .section-portfolio-list-item { list-style-type: none;}
 .section-portfolio-list-title {
+    color: #2e2f42;
         font-size: 20px;
         font-weight: 500;
         line-height: 1.2;
@@ -178,7 +184,7 @@ background: #4D5AE5;
     font-family: 'Raleway', sans-serif;
         font-size: 18px;
         font-weight: 700;
-        line-height: 1.16;
+        line-height: 1.17;
         letter-spacing: 0.03em;
         text-transform: uppercase;
         text-decoration: none;
