--- a/css/styles.css
+++ b/css/styles.css
@@ -3,9 +3,7 @@ color: #434455;
 background-color: #FFFFFF
 }
 .main-title { background-color: #2E2F42;
-width: 1440px;
-    height: 600px;
-    flex-shrink: 0;
+
 }
 /* header styls */
 .header-address {
@@ -81,16 +79,14 @@ background: #4D5AE5;
     line-height: 1.5;
     letter-spacing: 0.04em;
     cursor: pointer;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
 }
 .main-button:focus{
     background-color: #404BBF;
 }
 .main-button:hover {
-    border-radius: 4px;
-        background: #404BBF;
-        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+   
+        background-color: #404BBF;
+        
 }
 /* section-project */
 .section-project-h3 {
@@ -135,9 +131,7 @@ background-color: #FFFFFF;}
 }
 .section-team {
     background: #F4F4FD;
-    width: 1440px;
-        height: 732px;
-        flex-shrink: 0;
+    
 }
 /*our-portfolio  */
 .section-portfolio-title {
